# atreides

./: .gitattributes  .gitignore  CLAUDE.md  README.md  db.toml  pyproject.toml
src/: db.py  mask_db_config.py  misc.py  run_top_statements.py
src/scripts/db/: mask_db_config.py  run_top_statements.py
src/sql/: top_statements.sql
src/sql/DDL/: t_position.sql  t_positiontype.sql  t_status.sql  t_trade.sql  t_tradetype.sql
src/sql/queries/: cpu_stress.sql
src/sql/scripts/: generate_tenk1.py
src/tmp/cpu_stress/: run.py
src/tmp/explain/: run.py  runner.py
src/util/: db.py  explain_util.py  file_util.py
tests/: conftest.py  test_db.py  test_explain.py
