[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atreides"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3",
    "pandas>=2.3",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
